[gd_scene load_steps=10 format=2]

[ext_resource path="res://UI_scenes/Start_Screen.gd" type="Script" id=1]
[ext_resource path="res://UI_scenes/startbutton.gd" type="Script" id=2]
[ext_resource path="res://assets/fonts/Montserrat-SemiBold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/images/Frame 1.svg" type="Texture" id=4]
[ext_resource path="res://UI_scenes/circles.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 100
extra_spacing_char = 16
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 17
extra_spacing_char = 2
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="Start_Screen" type="Node2D"]
script = ExtResource( 1 )

[node name="circles" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Name" type="Node2D" parent="."]

[node name="Name" type="Label" parent="Name"]
margin_left = -146.5
margin_top = -92.322
margin_right = 146.5
margin_bottom = 30.678
theme = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "VIBE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Name"]
margin_left = -44.0
margin_top = 15.0
margin_right = 44.0
margin_bottom = 37.0
grow_horizontal = 2
theme = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "A SEMINAL MINIMAL
MUSICAL EXPERIENCE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BUTTON" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="TextureButton" type="TextureButton" parent="BUTTON"]
margin_left = -78.0
margin_top = 72.0
margin_right = 119.0
margin_bottom = 128.0
rect_scale = Vector2( 0.8, 0.8 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 513, 302 )

[connection signal="mouse_entered" from="BUTTON/TextureButton" to="BUTTON" method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="BUTTON/TextureButton" to="BUTTON" method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="BUTTON/TextureButton" to="BUTTON" method="_on_TextureButton_pressed"]
